--- a/package.json
+++ b/package.json
@@ -8,8 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
+    "jquery": "3.4.1",
+    "popper.js": "^1.16.1",
+    "vee-validate": "^2.2.15",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
+    "vue-cli-plugin-pug": "^1.0.7",
+    "vue-i18n": "^8.17.3",
+    "vue-loading-overlay": "^3.3.2",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
